// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Snapshot Testing Optional Props 1`] = `
<WithStyles(ForwardRef(TablePagination))
  ActionsComponent={
    Object {
      "$$typeof": Symbol(react.memo),
      "compare": null,
      "type": [Function],
    }
  }
  className="tablePagination snapshot-class"
  classes={
    Object {
      "menuItem": "text",
      "root": "text",
      "selectIcon": "selectIcon",
    }
  }
  component="span"
  count={20}
  data-qa="snapshot-qa"
  labelDisplayedRows={[Function]}
  labelRowsPerPage="rows per page"
  onChangePage={[MockFunction]}
  onChangeRowsPerPage={[MockFunction]}
  page={0}
  rowsPerPage={5}
  rowsPerPageOptions={
    Array [
      2,
      5,
      10,
    ]
  }
/>
`;

exports[`Snapshot Testing Required Props 1`] = `
<WithStyles(ForwardRef(TablePagination))
  ActionsComponent={
    Object {
      "$$typeof": Symbol(react.memo),
      "compare": null,
      "type": [Function],
    }
  }
  className="tablePagination"
  classes={
    Object {
      "menuItem": "text",
      "root": "text",
      "selectIcon": "selectIcon",
    }
  }
  component="span"
  count={20}
  labelDisplayedRows={[Function]}
  labelRowsPerPage="rows per page"
  onChangePage={[MockFunction]}
  onChangeRowsPerPage={[MockFunction]}
  page={0}
  rowsPerPage={5}
  rowsPerPageOptions={
    Array [
      2,
      5,
      10,
    ]
  }
/>
`;

exports[`should match snapshot 1`] = `
<WithStyles(ForwardRef(TablePagination))
  ActionsComponent={
    Object {
      "$$typeof": Symbol(react.memo),
      "compare": null,
      "type": [Function],
    }
  }
  className="tablePagination"
  classes={
    Object {
      "menuItem": "text",
      "root": "text",
      "selectIcon": "selectIcon",
    }
  }
  component="span"
  count={20}
  labelDisplayedRows={[Function]}
  labelRowsPerPage="rows per page"
  onChangePage={[MockFunction]}
  onChangeRowsPerPage={[MockFunction]}
  page={0}
  rowsPerPage={5}
  rowsPerPageOptions={
    Array [
      5,
      10,
    ]
  }
/>
`;
